# personality-core

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  test-request.json  tsconfig.json  vite.config.ts
cores/: chaos_core.json  hype_core.json  low_verbosity_core.json  profanity_core.json  professional_support_core.json  sarcasm_core.json  skepticism_core.json  stability_core.json  structured_json_output_core.json  technical_core.json  warmth_core.json
docs/: behavior_contracts.md  core_creator.md  demo_and_backend_notes.md  demo_kit.md  frontend_workbench.md  handoff_2026-04-29.md  personality_core_full_design_doc.md  provider_setup.md  runtime_mutations.md  stack_workflow.md
examples/: curl_ollama.md  custom_core_authoring.md  drift_test.py  profanity_slider_test.py  python_client.py
model_profiles/: ollama_default.json  ollama_gemma4_e4b.json  openai_default.json
personalities/: chaos_goblin.json  deadpan_debugger.json  patient_tutor.json  professional_support.json  startup_cofounder.json
scripts/: dev.mjs
src/personality_core/: app.py  config.py  main.py  schemas.py
src/personality_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/personality_core/adapters/: base.py  ollama.py  openai.py
src/personality_core/core/: compiler.py  core_registry.py  core_stack.py  (+5 more)
src_ui/: main.tsx  styles.css
tests/: test_compare_request.py  test_compiler.py  test_contracts.py  test_core_creator.py  test_core_stack.py  test_mutations.py  test_providers.py  test_scoring.py
(+4 files in other folders)
