[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personality-core"
version = "0.1.0"
description = "Composable personality cores for LLM runtimes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.26",
  "typer>=0.9",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
personality-core = "personality_core.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
personality_core = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -p no:cacheprovider"
